# portfolio-python

./: README.md  how-to-python-environment.md  pipeline  working_with_python_env.txt
0_begin_here/sandbox/: README.md
0_begin_here/sandbox/test-poetry/: pyproject.toml
0_begin_here/use_jupyter/: hangman_words.txt  how-to-python.ipynb  requirements.txt  requirements_full.txt  test_write.txt
1_large_number_processing/: large-number-demo-solutions.txt  large-number-demo.py
2_prompt_automation/: openai_1.py
3_python_for_ml/use_scikit-learn/: how-to-scikit-learn.ipynb  requirements.txt  requirements_full.txt
