[project]
name = "sap-demo"
version = "0.1.0"
description = "sap_demp_0.1.0"
authors = [
    {name = "sap",email = "sanjaysp91@users.noreply.github.com"}
]
license = {text = "MIL"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
